Practice/day-1/terraform/security.tf
# Security.tf - Firewall for the EC2 Server
resource "aws_security_group" "aws-sg" {
  name = var.provider_security_group

  # Allow Public access (HTTP)
  ingress{           
    from_port    = 80    
    to_port	 = 80
    protocol	 = "tcp"
    cidr_blocks  = ["0.0.0.0/0"]
  }
  # Allow Public access (HTTPS)
  ingress{            
    from_port	 = 443
    to_port      = 443
    protocol     = "tcp"
    cidr_blocks	 = ["0.0.0.0/0"]
  }

  # Allow Public access (SSH)
  ingress{            
    from_port	 = 22	 
    to_port      = 22
    protocol     = "tcp"
    cidr_blocks	 = ["0.0.0.0/0"]
  }

  # Allow Internet access
  ingress{            
    from_port	 = 0	 
    to_port      = 0
    protocol     = "-1"
    cidr_blocks	 = ["0.0.0.0/0"]
  }
}
